# mergic

./: .gitignore  CREDITS.md  LICENSE  README.md  pyproject.toml
docs/: conf.py  game_design.ja.md  index.md  spec.ja.md
examples/: game_design.ja.md  hello_world.py  mainloop_template.py  ui.py
examples/wizhalen_old/: __main__.py  combat.py  combat_cli.py  components.py  entities.py  status.py
examples/wizhalen_old/tests/: test_combat.py  test_wizard.py
mergic/: __init__.py  __main__.py  asset.py  calculation_tools.py  cli.py  combat.py  combat_cli.py  components.py  entities.py  gamemap.py  gamemap_editor.py  gui.py  mainloop_template.py  ui.py  utils.py  wizard.py
mergic/assets/imgs/tiles/: Grass.json  TexturedGrass.json
mergic/assets/sounds/musics/: credits.txt
mergic/gamemaps/: debug1.json  test.json
tests/: _test_gui.py  test.py  test_asset.py  test_combat.py  test_gamemap.py  test_mergic.py  test_wizard.py
tools/: battle_simulator.py  battle_simulator_prototype.py  spell_generation_simulator.py
tools/gamemap_editor/: gamemap_editor.py  gamemap_editor_prototype.py  launcher.py  tiletype_to_asset.json
tools/gamemap_viewer/: __main__.py
